--- a/src/vigilo/themes/templates/common/error.html
+++ b/src/vigilo/themes/templates/common/error.html
@@ -14,6 +14,6 @@
 <body>
 <h1>${l_('Error %(error_code)s') % {'error_code': code}}</h1>
 
-<div>${XML(message)}</div>
+<div>${message}</div>
 </body>
 </html>
