Ajoute des plugins dans VigiBoard.
Ajoute les plugins "groups" et "masked_events" dans les colonnes de VigiBoard.
Pour le moment, ces plugins n'affichent aucun contenu (ils sont donc invisibles).
Le plugin "masked_events" servira pour l'implémentation du ticket #558.

Le plugin "groups" permet de gérer la recherche dans VigiBoard selon le nouveau
modèle plus extensible (réutilisant les points d'entrée déjà définis).
À terme, il permettra d'implémenter l'affichage d'informations sur les groupes (#557).

Un commit est à venir dans VigiBoard pour exploiter ces nouveaux plugins.

Ce commit simplifie également le code du formulaire de recherche
et une partie des styles. Il prépare également le formulaire de
recherche pour le champ de recherche sur la priorité (#572).


git-svn-id: https://vigilo-dev.si.c-s.fr/svn@6558 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigiboard/css/common_events.css
+++ b/src/vigilo/themes/public/vigiboard/css/common_events.css
@@ -221,6 +221,10 @@ div.clearingdiv {
     font-size: 1.2em;
 }
 
+#search_form_priority_value {
+    width: 82.5% !important;
+}
+
 #search_mode_tip {
     margin-top: 7px;
 }
