--- a/src/vigilo/themes/templates/vigiboard/vigiboard.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard.html
@@ -53,24 +53,8 @@ ${toolbar()}
     <div py:strip="True" py:if="flash" py:content="XML(flash)" />
 </py:with>
 
-<!--!
-    On utilise le traducteur de l'application ici plutôt que celui des thèmes
-    pour éviter des erreurs d'interprétation du format dans le contrôleur.
--->
 <div style="display: none" py:with="copy = search.copy(); dummy = copy.update(host=copy.pop('host_', None))">
-    ${search_form(
-        search,
-        child_args=dict(
-            from_date=dict(
-                date_format=_('%Y-%m-%d %I:%M:%S %p'),
-                calendar_lang=get_calendar_lang(),
-            ),
-            to_date=dict(
-                date_format=_('%Y-%m-%d %I:%M:%S %p'),
-                calendar_lang=get_calendar_lang(),
-            ),
-        ),
-    )}
+    ${search_form(copy)}
 </div>
 
 <script type="text/javascript">
